[tool.poetry]
name = "pyqt6-app-skeleton"
version = "0.1.0"
description = ""
authors = ["Derfies <Derfies@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pyside6 = "6.6.3.1"
pyqtdarktheme = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
